@@ -1,4 +1,5 @@
 Changes
+bin/lucyx-dump-terms
 lib/SWISH/Prog/Lucy.pm
 lib/SWISH/Prog/Lucy/Indexer.pm
 lib/SWISH/Prog/Lucy/InvIndex.pm
